完成个人资料设置，接下来是完成后台管理部分的创建员工和创建工作区 之后就是添加加入工作区的逻辑，然后完成工作项的逻辑

--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,5 @@ FodyWeavers.xsd
 *.msm
 *.msp
 /SyncArea/SyncArea/workmanagement.db
+/SyncArea/SyncArea/workmanagement.db-shm
+/SyncArea/SyncArea/workmanagement.db-wal
