--- a/SyncArea/SyncArea/appsettings.json
+++ b/SyncArea/SyncArea/appsettings.json
@@ -10,6 +10,7 @@
     "DefaultConnection": "Data Source=workmanagement.db"
   },
   "DefaultAdminModel": {
+    "Name": "王硕",
     "Account": "2216528769",
     "Password": "80231314w"
   }
