--- a/SyncArea/SyncArea/SyncArea.csproj
+++ b/SyncArea/SyncArea/SyncArea.csproj
@@ -8,6 +8,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Blazor.QrCodeGen" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
