--- a/SyncArea/SyncArea/appsettings.json
+++ b/SyncArea/SyncArea/appsettings.json
@@ -10,8 +10,8 @@
     "DefaultConnection": "Data Source=workmanagement.db"
   },
   "DefaultAdminModel": {
-    "Name": "王硕",
-    "Account": "2216528769",
-    "Password": "80231314w"
+    "Name": "王强",
+    "Account": "170821210221",
+    "Password": "123456"
   }
 }
