--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,4 @@ FodyWeavers.xsd
 /SyncArea/SyncArea/workmanagement.db-shm
 /SyncArea/SyncArea/workmanagement.db-wal
 /SyncArea/SyncArea/wwwroot/images
+/SyncArea/SyncArea/images
