明天开工，要认真了

--- a/SyncArea/SyncArea/appsettings.json
+++ b/SyncArea/SyncArea/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Port": "8080",
+  "Port": "5355",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=workmanagement.db"
+    "DefaultConnection": "Data Source=/var/data/syncarea/workmanagement.db"
   },
   "DefaultAdminModel": {
     "Name": "王强",
