完成了文件目录的修改 密码重置和修改的bug

--- a/SyncArea/SyncArea/SyncArea.csproj
+++ b/SyncArea/SyncArea/SyncArea.csproj
@@ -26,4 +26,9 @@
     <PackageReference Include="MudBlazor" Version="8.*" />
     <PackageReference Include="MudX.MudBlazor.Extension" Version="8.10.0" />
   </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Docs\" />
+  </ItemGroup>
 </Project>
