--- a/SyncArea/SyncArea/appsettings.Development.json
+++ b/SyncArea/SyncArea/appsettings.Development.json
@@ -5,7 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "ConnectionStrings": {
-      "DefaultConnection": "Data Source=workmanagement_dev.db"
-    }
+  "ImagesPathModel": {
+    "ImagePath": "D:\\成品发布\\测试文件夹\\Images"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=workmanagement_dev.db"
+  }
 }
