--- a/SyncArea/SyncArea/appsettings.json
+++ b/SyncArea/SyncArea/appsettings.json
@@ -10,6 +10,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=/var/data/syncarea/workmanagement.db"
   },
+  "ImagesPathModel": {
+    "ImagePath": "/var/data/syncarea/images"
+  },
   "DefaultAdminModel": {
     "Name": "王强",
     "Account": "18706171824",
