--- a/SyncArea/SyncArea/SyncArea.csproj
+++ b/SyncArea/SyncArea/SyncArea.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Blazor.QrCodeGen" Version="1.1.3" />
     <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
