--- a/SyncArea/SyncArea/appsettings.Development.json
+++ b/SyncArea/SyncArea/appsettings.Development.json
@@ -9,6 +9,6 @@
     "ImagePath": "D:\\成品发布\\测试文件夹\\Images"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=workmanagement_dev.db"
+    "DefaultConnection": "Data Source=D:\\成品发布\\测试文件夹\\workmanagement_dev.db"
   }
 }
